# Simple_Server_Client

./: CMakeLists.txt  README.MD
.github/workflows/: cmake.yml
projects/client/: CMakeLists.txt
projects/client/include/: client.hpp  clientUI.hpp
projects/client/src/: client.cpp  clientUI.cpp  main.cpp
projects/server/: CMakeLists.txt
projects/server/include/: server.hpp  serverUI.hpp
projects/server/src/: main.cpp  server.cpp  serverUI.cpp
